# 10-pearls-AQI

./: .coverage  .env.example  .gitignore  DEPLOYMENT_MONGODB_FIX.md  Dockerfile.backend  Dockerfile.frontend  FORECAST_GENERATION_FIX.md  README.md  REQUIREMENTS_CHECK.md  api_config.json  coverage.xml  docker-compose.yml  feature_columns.txt  pyproject.toml  requirements.txt  run.bat  start.bat  start.ps1  user_prefs.json
.devcontainer/: devcontainer.json
.github/workflows/: ci-cd.yml
.streamlit/: secrets.toml.template
.venv_tf/: pyvenv.cfg
.venv_tf/Scripts/: activate  activate.bat
.venv_ui/: pyvenv.cfg
.venv_ui/Scripts/: activate  activate.bat
backend/: __init__.py  main.py
backend/api/: models.py  routes.py
backend/core/: __init__.py  config.py  connection_monitor.py  database.py  database_main.py  database_mongodb.py
backend/services/: api_fetcher.py  prediction_pipeline.py  prediction_service.py  shap_service.py
frontend/: dashboard_enhanced.py
ml_models/: eda_preprocessing.ipynb  lstm_model.py  train_lstm_quick.py  train_models.py
models/: lstm_config.json  lstm_model.keras  scaler.pkl  xgboost_model.json  xgboost_model.pkl
scripts/: automated_data_fetch.py  diagnose_mongodb.py  fetch_karachi_data.py  main_legacy.py  quickstart.sh  verify_models.py
tests/: test_backend.py  test_models.py
